publish and no override

--- a/build.gradle
+++ b/build.gradle
@@ -587,7 +587,7 @@ bintray {
 	user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
 	key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_KEY')
 	publications = ["maven"]
-	override = true
+	publish = true
 	pkg {
 		repo = "Legacy-Fabric-Maven"
 		name = "yarn-1.8.9"
